--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start-dev": "nodemon src/server.js"
+    "start-dev": "nodemon src/server/server.js",
+    "start": "node src/server/server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,10 @@
     "nodemon": "^3.1.1"
   },
   "dependencies": {
-    "@hapi/hapi": "^21.3.9"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mysql2": "^3.9.8",
+    "sequelize": "^6.37.3",
+    "uuid": "^9.0.1"
   }
 }
