--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "nodemon": "^3.1.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.9.8",
-    "sequelize": "^6.37.3",
-    "uuid": "^9.0.1"
+    "sequelize": "^6.37.3"
   }
 }
