--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ MYSQL_USER=root
 MYSQL_PASS=123
 MYSQL_HOST=localhost
 MYSQL_DATABASE=laptoplens
+
+KEY_PASSWORD = "https://identitytoolkit.googleapis.com/v1/accounts:signInWithPassword?key=AIzaSyABoGIhUc2DDJ3eqrjtXJ9VeaxmYGd6jEU"
+SECURE_TOKEN = "https://securetoken.googleapis.com/v1/token?key=AIzaSyABoGIhUc2DDJ3eqrjtXJ9VeaxmYGd6jEU"
