--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "nodemon": "^3.1.3"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mysql2": "^3.9.8",
-    "sequelize": "^6.37.3",
-    "axios": "^1.7.2",
-    "cookie-parser": "^1.4.6",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.1.1",
-    "nodemailer": "^6.9.13"
+    "json2csv": "^6.0.0-alpha.2",
+    "moment": "^2.30.1",
+    "mysql2": "^3.9.8",
+    "sequelize": "^6.37.3"
   }
 }
