--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sequelize": "^6.37.3",
     "@google-cloud/firestore": "^7.8.0",
     "@tensorflow/tfjs-node": "^4.20.0",
+    "@google-cloud/cloud-sql-connector": "^1.3.1",
     "multer": "^1.4.5-lts.1",
     "csv-parser": "^3.0.0"
   },
