--- a/package.json
+++ b/package.json
@@ -13,22 +13,23 @@
     "nodemon": "^3.1.3"
   },
   "dependencies": {
+    "@google-cloud/cloud-sql-connector": "^1.3.1",
+    "@google-cloud/firestore": "^7.8.0",
+    "@tensorflow/tfjs-node": "^4.20.0",
     "axios": "^1.7.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.1.1",
     "json2csv": "^6.0.0-alpha.2",
     "moment": "^2.30.1",
-    "mysql2": "^3.9.8",
-    "sequelize": "^6.37.3",
-    "@google-cloud/firestore": "^7.8.0",
-    "@tensorflow/tfjs-node": "^4.20.0",
-    "@google-cloud/cloud-sql-connector": "^1.3.1",
     "multer": "^1.4.5-lts.1",
-    "csv-parser": "^3.0.0"
+    "mysql2": "^3.9.8",
+    "nodemailer": "^6.9.13",
+    "sequelize": "^6.37.3"
   },
   "repository": {
     "type": "git",
@@ -40,4 +41,3 @@
   "homepage": "https://github.com/GabrielMoody/LaptopLensAPI#readme",
   "description": ""
 }
-
